--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     //Textos //
     <string name="ComoDoarTxt"> Escolha brinquedos em boas condições, como Woody e Buzz sempre prontos para a diversão. Ao doar com intenção e qualidade, você garante que a alegria se estenda</string>
     <string name="PqDoarTxt">Doar brinquedos é como estender a alegria dos brinquedos a novas crianças, promovendo solidariedade e renovando sorrisos. Assim ajudando os brinquedos a comprirem sua missão</string>
+
+    //mudar o texto dos benefícios, texto provisório//
+    <string name="BeneficiosTxt">Então, doar brinquedos é uma maneira incrível de fazer o mundo um lugar mais feliz e aprender coisas boas ao mesmo tempo!</string>
 </resources>
