--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="btnentrar">ENTRAR</string>
     <string name="BtnDoar">DOAR</string>
     <string name="BtnBrinquedosDoados">BRINQUEDOS DOADOS</string>
+    <string name="BtnMapa">MAPA</string>
 
     //Textos //
     <string name="ComoDoarTxt"> Escolha brinquedos em boas condições, como Woody e Buzz sempre prontos para a diversão. Ao doar com intenção e qualidade, você garante que a alegria se estenda</string>
