atualização nas activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
 
     //mudar o texto dos benefícios, texto provisório//
     <string name="BeneficiosTxt">Então, doar brinquedos é uma maneira incrível de fazer o mundo um lugar mais feliz e aprender coisas boas ao mesmo tempo!</string>
+    <string name="txtinstituicao1"> Instituição Parceira: Projeto Saint Germain </string>
+    <string name="txtinstituicaodescr"> Desde 2005 fazendo o mundo das crianças um lugar melhor!</string>
+    <string name="txtusuariodescr"> Um patrulheiro mais que especial, que ajuda os brinquedos a cumprirem sua missão!</string>
 </resources>
