--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="txtinstituicao1"> Instituição Parceira: Projeto Saint Germain </string>
     <string name="txtinstituicaodescr"> Desde 2005 fazendo o mundo das crianças um lugar melhor!</string>
     <string name="txtusuariodescr"> Um patrulheiro mais que especial, que ajuda os brinquedos a cumprirem sua missão!</string>
+    <string name="todo">TODO</string>
 </resources>
