--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="BtnLogin2">Logar-se</string>
     <string name="BtnImportancia">TESTE</string>
     <string name="txtSenha">Senha:</string>
-    <string name="butao">butao</string>
-
+    <string name="butao">SENSOR</string>
+    <string name="txtsacudir">Movimente o celular! Veja seu brinquedo favorito</string>
 
     //Textos //
     <string name="ComoDoarTxt"> Escolha brinquedos em boas condições, como Woody e Buzz sempre prontos para a diversão. Ao doar com intenção e qualidade, você garante que a alegria se estenda</string>
